@@ -3,12 +3,8 @@
 // This file ONLY is placed into the Public Domain, for any use,
 // without warranty, 2000-2007 by Wilson Snyder.
 
-module v_hier_top2 (/*AUTOARG*/
-   // Inputs
-   clk
-   );
-   input clk;
+assign foo = 0
 
-   v_hier_noport noport ();
-
+module v_hier_noport;
+   reg internal;
 endmodule
